SPM-1290: fix tags dropdown alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,10 @@ table.patchCompactInventory {
         display: contents;
         height: 20px;
     }
+
+    .ins-c-tagfilter {
+        padding: 0!important;
+    }
 }
 
 .ins-c-primary-toolbar {
